# src/gen/swagger-output.json
@@ -50,6 +50,33 @@
         }
       }
     },
+    "/api/company/{companyId}/analyze": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "companyId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "url",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/api/campaigns": {
       "get": {
         "description": "",
